@@ -2,11 +2,12 @@ package io.github.jbellis.brokk.gui;
 
 import io.github.jbellis.brokk.ContextFragment;
 import io.github.jbellis.brokk.ContextManager;
-import io.github.jbellis.brokk.GitRepo;
-import io.github.jbellis.brokk.GitRepo.CommitInfo;
-import io.github.jbellis.brokk.analyzer.RepoFile;
+import io.github.jbellis.brokk.git.GitRepo;
+import io.github.jbellis.brokk.git.GitRepo.CommitInfo;
+import io.github.jbellis.brokk.analyzer.ProjectFile;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.fife.ui.rsyntaxtextarea.SyntaxConstants;
 
 import javax.swing.*;
 import javax.swing.table.DefaultTableModel;
@@ -35,7 +36,7 @@ import java.util.stream.Collectors;
  * - Search functionality
  */
 public class GitLogPanel extends JPanel {
-    
+
     // Methods to expose to GitPanel for finding and selecting commits by ID
 
     private static final Logger logger = LogManager.getLogger(GitLogPanel.class);
@@ -73,6 +74,33 @@ public class GitLogPanel extends JPanel {
     }
 
     /**
+     * Compare the previous version of each file (commitId^) to the local on-disk file.
+     * If commitId has no parent (i.e. first commit), we treat the old content as empty.
+     */
+    private void comparePreviousFilesWithLocal(String commitId, List<String> filePaths) {
+        contextManager.submitUserTask("Comparing previous version with local", () -> {
+            try {
+                for (String path : filePaths) {
+                    var repoFile = new ProjectFile(contextManager.getRoot(), path);
+
+                    SwingUtilities.invokeLater(() -> {
+                        DiffPanel diffPanel = new DiffPanel(contextManager);
+                        // We'll pass true to instruct the panel to use commitId^ (parent), or else empty
+                        diffPanel.showCompareWithLocal(commitId, repoFile, /*useParent=*/ true);
+
+                        String shortHash = (commitId + "^").substring(0, Math.min(commitId.length() + 1, 7));
+                        String title = String.format("Diff: %s [Local vs %s]", repoFile.getFileName(), shortHash);
+                        diffPanel.showInDialog(GitLogPanel.this, title);
+                    });
+                }
+            } catch (Exception ex) {
+                logger.error("Error comparing previous version with local", ex);
+                chrome.toolErrorRaw("Error comparing previous version with local: " + ex.getMessage());
+            }
+        });
+    }
+
+    /**
      * Creates and arranges all the "Log" tab sub-panels:
      * - Branches (local + remote)
      * - Commits
@@ -92,17 +120,22 @@ public class GitLogPanel extends JPanel {
 
         JPanel branchesPanel = new JPanel(new BorderLayout());
         branchesPanel.setBorder(BorderFactory.createTitledBorder("Branches"));
-        
+
         // Create tabbed pane for Local and Remote branches
         JTabbedPane branchTabbedPane = new JTabbedPane();
-        
+
         // Local branches panel
         JPanel localBranchPanel = new JPanel(new BorderLayout());
         branchTableModel = new DefaultTableModel(new Object[]{"", "Branch"}, 0) {
             @Override
-            public boolean isCellEditable(int row, int column) { return false; }
+            public boolean isCellEditable(int row, int column) {
+                return false;
+            }
+
             @Override
-            public Class<?> getColumnClass(int columnIndex) { return String.class; }
+            public Class<?> getColumnClass(int columnIndex) {
+                return String.class;
+            }
         };
         branchTable = new JTable(branchTableModel) {
             @Override
@@ -125,14 +158,19 @@ public class GitLogPanel extends JPanel {
         branchTable.getColumnModel().getColumn(0).setMinWidth(20);
         branchTable.getColumnModel().getColumn(0).setPreferredWidth(20);
         localBranchPanel.add(new JScrollPane(branchTable), BorderLayout.CENTER);
-        
+
         // Remote branches panel
         JPanel remoteBranchPanel = new JPanel(new BorderLayout());
         remoteBranchTableModel = new DefaultTableModel(new Object[]{"Branch"}, 0) {
             @Override
-            public boolean isCellEditable(int row, int column) { return false; }
+            public boolean isCellEditable(int row, int column) {
+                return false;
+            }
+
             @Override
-            public Class<?> getColumnClass(int columnIndex) { return String.class; }
+            public Class<?> getColumnClass(int columnIndex) {
+                return String.class;
+            }
         };
         remoteBranchTable = new JTable(remoteBranchTableModel);
         remoteBranchTable.setFont(new Font(Font.MONOSPACED, Font.PLAIN, 12));
@@ -163,8 +201,11 @@ public class GitLogPanel extends JPanel {
                 if (columnIndex == 4) return Boolean.class;
                 return String.class;
             }
+
             @Override
-            public boolean isCellEditable(int row, int column) { return false; }
+            public boolean isCellEditable(int row, int column) {
+                return false;
+            }
         };
         commitsTable = new JTable(commitsTableModel) {
             // Add tooltip to show full commit message
@@ -179,7 +220,7 @@ public class GitLogPanel extends JPanel {
             }
         };
         commitsTable.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
-        
+
         // Hide id and unpushed columns
         commitsTable.getColumnModel().getColumn(3).setMinWidth(0);
         commitsTable.getColumnModel().getColumn(3).setMaxWidth(0);
@@ -229,7 +270,7 @@ public class GitLogPanel extends JPanel {
                 }
             });
         }
-        JMenuItem addToContextItem = new JMenuItem("Add Changes to Context");
+        JMenuItem addToContextItem = new JMenuItem("Capture Diff");
         JMenuItem softResetItem = new JMenuItem("Soft Reset to Here");
         JMenuItem revertCommitItem = new JMenuItem("Revert Commit");
         JMenuItem popStashCommitItem = new JMenuItem("Pop Stash");
@@ -240,7 +281,7 @@ public class GitLogPanel extends JPanel {
         commitsContextMenu.add(addToContextItem);
         commitsContextMenu.add(softResetItem);
         commitsContextMenu.add(revertCommitItem);
-        
+
         commitsContextMenu.add(popStashCommitItem);
         commitsContextMenu.add(applyStashCommitItem);
         commitsContextMenu.add(dropStashCommitItem);
@@ -335,7 +376,7 @@ public class GitLogPanel extends JPanel {
                 revertCommit(commitId);
             }
         });
-        
+
         // Add handlers for stash operations in the commit context menu
         popStashCommitItem.addActionListener(e -> {
             int row = commitsTable.getSelectedRow();
@@ -393,21 +434,21 @@ public class GitLogPanel extends JPanel {
                 }
             }
         });
-        
+
 
         commitsPanel.add(new JScrollPane(commitsTable), BorderLayout.CENTER);
 
         // Buttons below commits table
         JPanel commitsPanelButtons = new JPanel(new FlowLayout(FlowLayout.RIGHT));
-        
+
         // Push button for local branches
         pushButton = new JButton("Push");
         pushButton.setToolTipText("Push commits to remote repository");
         pushButton.setEnabled(false);
         pushButton.addActionListener(e -> pushBranch());
         commitsPanelButtons.add(pushButton);
-        
-        
+
+
         commitsPanel.add(commitsPanelButtons, BorderLayout.SOUTH);
 
         // ============ Changes Panel (right ~25%) ============
@@ -420,7 +461,7 @@ public class GitLogPanel extends JPanel {
         changesTree.getSelectionModel().setSelectionMode(TreeSelectionModel.DISCONTIGUOUS_TREE_SELECTION);
         changesPanel.add(new JScrollPane(changesTree), BorderLayout.CENTER);
 
-        // Context menu on changes tree
+// Context menu on changes tree
         JPopupMenu changesContextMenu = new JPopupMenu();
         if (chrome.themeManager != null) {
             chrome.themeManager.registerPopupMenu(changesContextMenu);
@@ -432,37 +473,23 @@ public class GitLogPanel extends JPanel {
                 }
             });
         }
-        JMenuItem addFileToContextItem = new JMenuItem("Add Changes to Context");
+
+        JMenuItem addFileToContextItem = new JMenuItem("Capture Diff");
         JMenuItem compareFileWithLocalItem = new JMenuItem("Compare with Local");
-        JMenuItem viewDiffItem = new JMenuItem("Show Diff");
+        JMenuItem viewDiffItem = new JMenuItem("View Diff");
+        JMenuItem viewFileAtRevisionItem = new JMenuItem("View File at Revision");
         JMenuItem viewHistoryItem = new JMenuItem("View History");
-        JMenuItem editFileItem = new JMenuItem("Edit File");
+        JMenuItem editFileItem = new JMenuItem("Edit File(s)");
+        JMenuItem comparePrevWithLocalItem = new JMenuItem("Compare Previous with Local");
         changesContextMenu.add(addFileToContextItem);
-        changesContextMenu.add(compareFileWithLocalItem);
+        changesContextMenu.add(editFileItem);
+        changesContextMenu.addSeparator();
         changesContextMenu.add(viewDiffItem);
         changesContextMenu.add(viewHistoryItem);
-        changesContextMenu.add(editFileItem);
-        // Assign the popup menu so the LAF automatically shows/hides it on right-click:
-        changesTree.setComponentPopupMenu(changesContextMenu);
-        // Add a minimal mouse listener to select the node on right-click.
-        changesTree.addMouseListener(new java.awt.event.MouseAdapter() {
-            @Override
-            public void mousePressed(MouseEvent e) {
-                maybeSelectPath(e);
-            }
-            @Override
-            public void mouseReleased(MouseEvent e) {
-                maybeSelectPath(e);
-            }
-            private void maybeSelectPath(MouseEvent e) {
-                if (e.isPopupTrigger()) {
-                    var path = changesTree.getPathForLocation(e.getX(), e.getY());
-                    if (path != null && !changesTree.isPathSelected(path)) {
-                        changesTree.setSelectionPath(path);
-                    }
-                }
-            }
-        });
+        changesContextMenu.add(viewFileAtRevisionItem);
+        changesContextMenu.add(compareFileWithLocalItem);
+        changesContextMenu.add(comparePrevWithLocalItem);
+
         // Add mouse listener for changes tree popup
         changesTree.addMouseListener(new java.awt.event.MouseAdapter() {
             @Override
@@ -483,31 +510,32 @@ public class GitLogPanel extends JPanel {
                             changesTree.setSelectionRow(row);
                         }
                     }
-                    
+
                     TreePath[] paths = changesTree.getSelectionPaths();
                     boolean hasFileSelection = paths != null && paths.length > 0 && hasFileNodesSelected(paths);
                     int[] selRows = commitsTable.getSelectedRows();
                     boolean isSingleCommit = (selRows.length == 1);
 
                     addFileToContextItem.setEnabled(hasFileSelection);
-                    compareFileWithLocalItem.setEnabled(hasFileSelection && isSingleCommit);
-                    viewHistoryItem.setEnabled(hasFileSelection);
+                    viewDiffItem.setEnabled(paths.length == 1);
+                    viewFileAtRevisionItem.setEnabled(paths.length == 1 && isSingleCommit);
+                    compareFileWithLocalItem.setEnabled(paths.length == 1 && isSingleCommit);
+                    comparePrevWithLocalItem.setEnabled(paths.length == 1 && isSingleCommit);
+                    viewHistoryItem.setEnabled(paths.length == 1);
                     editFileItem.setEnabled(hasFileSelection);
-                    
+
                     changesContextMenu.show(changesTree, e.getX(), e.getY());
                 }
             }
         });
-        
+
         // Add double-click handler to show diff
         changesTree.addMouseListener(new java.awt.event.MouseAdapter() {
             @Override
             public void mouseClicked(java.awt.event.MouseEvent e) {
-                if (e.getClickCount() == 2)
-                {
+                if (e.getClickCount() == 2) {
                     var path = changesTree.getPathForLocation(e.getX(), e.getY());
-                    if (path != null)
-                    {
+                    if (path != null) {
                         viewDiffForChangesTree(path);
                     }
                 }
@@ -542,6 +570,35 @@ public class GitLogPanel extends JPanel {
             }
         });
 
+        comparePrevWithLocalItem.addActionListener(e -> {
+            TreePath[] paths = changesTree.getSelectionPaths();
+            if (paths != null && paths.length > 0) {
+                List<String> selectedFiles = getSelectedFilePaths(paths);
+                if (!selectedFiles.isEmpty()) {
+                    int[] selRows = commitsTable.getSelectedRows();
+                    if (selRows.length == 1) {
+                        String commitId = (String) commitsTableModel.getValueAt(selRows[0], 3);
+                        comparePreviousFilesWithLocal(commitId, selectedFiles);
+                    }
+                }
+            }
+        });
+
+        viewFileAtRevisionItem.addActionListener(e -> {
+            TreePath[] paths = changesTree.getSelectionPaths();
+            if (paths != null && paths.length == 1) {
+                List<String> selectedFiles = getSelectedFilePaths(paths);
+                if (selectedFiles.size() == 1) {
+                    int[] selRows = commitsTable.getSelectedRows();
+                    if (selRows.length == 1) {
+                        String commitId = (String) commitsTableModel.getValueAt(selRows[0], 3);
+                        String filePath = selectedFiles.get(0);
+                        viewFileAtRevision(commitId, filePath);
+                    }
+                }
+            }
+        });
+
         // We only show a single-file diff if there is exactly one commit selected
         viewDiffItem.addActionListener(e -> {
             TreePath[] paths = changesTree.getSelectionPaths();
@@ -549,7 +606,7 @@ public class GitLogPanel extends JPanel {
                 viewDiffForChangesTree(paths[0]);
             }
         });
-        
+
         viewHistoryItem.addActionListener(e -> {
             TreePath[] paths = changesTree.getSelectionPaths();
             if (paths != null && paths.length > 0) {
@@ -668,10 +725,12 @@ public class GitLogPanel extends JPanel {
             });
         }
         JMenuItem checkoutItem = new JMenuItem("Checkout");
+        JMenuItem newBranchItem = new JMenuItem("New Branch From This");
         JMenuItem mergeItem = new JMenuItem("Merge into HEAD");
         JMenuItem renameItem = new JMenuItem("Rename");
         JMenuItem deleteItem = new JMenuItem("Delete");
         branchContextMenu.add(checkoutItem);
+        branchContextMenu.add(newBranchItem);
         branchContextMenu.add(mergeItem);
         branchContextMenu.add(renameItem);
         branchContextMenu.add(deleteItem);
@@ -708,6 +767,13 @@ public class GitLogPanel extends JPanel {
             if (selectedRow != -1) {
                 String branchDisplay = (String) branchTableModel.getValueAt(selectedRow, 1);
                 checkoutBranch(branchDisplay);
+            }
+        });
+        newBranchItem.addActionListener(e -> {
+            int selectedRow = branchTable.getSelectedRow();
+            if (selectedRow != -1) {
+                String sourceBranch = (String) branchTableModel.getValueAt(selectedRow, 1);
+                createNewBranchFrom(sourceBranch);
             }
         });
         mergeItem.addActionListener(e -> {
@@ -770,7 +836,7 @@ public class GitLogPanel extends JPanel {
                             currentBranchRow = branchTableModel.getRowCount() - 1;
                         }
                     }
-                    
+
                     // Add virtual "stashes" branch if there are stashes
                     try {
                         List<GitRepo.StashInfo> stashes = getRepo().listStashes();
@@ -818,7 +884,6 @@ public class GitLogPanel extends JPanel {
         contextManager.submitBackgroundTask("Fetching commits for " + branchName, () -> {
             try {
                 List<CommitInfo> commits;
-                boolean isLocalBranch;
                 Set<String> unpushedCommitIds = new HashSet<>();
                 boolean canPush = false;
 
@@ -826,17 +891,14 @@ public class GitLogPanel extends JPanel {
                 if ("stashes".equals(branchName)) {
                     try {
                         commits = getStashesAsCommits();
-                        isLocalBranch = false; // Don't treat stashes as pushable
                     } catch (IOException e) {
                         logger.error("Error fetching stashes", e);
                         commits = List.of();
-                        isLocalBranch = false;
                     }
                 } else {
                     // Normal branch handling
                     commits = getRepo().listCommitsDetailed(branchName);
-                    isLocalBranch = branchName.equals(getRepo().getCurrentBranch()) || !branchName.contains("/");
-                    
+                    var isLocalBranch = branchName.equals(getRepo().getCurrentBranch()) || !branchName.contains("/");
                     if (isLocalBranch) {
                         try {
                             unpushedCommitIds.addAll(getRepo().getUnpushedCommitIds(branchName));
@@ -857,8 +919,8 @@ public class GitLogPanel extends JPanel {
 
                     pushButton.setEnabled(finalCanPush);
                     pushButton.setToolTipText(finalCanPush
-                                                     ? "Push " + unpushedCount + " commit(s) to remote"
-                                                     : "No unpushed commits or no upstream branch configured");
+                                                      ? "Push " + unpushedCount + " commit(s) to remote"
+                                                      : "No unpushed commits or no upstream branch configured");
                     pushButton.setVisible(!branchName.equals("stashes")); // Hide push button for stashes
 
                     if (finalCommits.isEmpty()) {
@@ -905,15 +967,14 @@ public class GitLogPanel extends JPanel {
     /**
      * Fills the "Changes" tree with files from the selected commits.
      */
-    private void updateChangesForCommits(int[] selectedRows)
-    {
+    private void updateChangesForCommits(int[] selectedRows) {
         contextManager.submitBackgroundTask("Fetching changes for commits", () -> {
             try {
-                var allChangedFiles = new HashSet<RepoFile>();
+                var allChangedFiles = new HashSet<ProjectFile>();
                 for (var row : selectedRows) {
                     if (row >= 0 && row < commitsTableModel.getRowCount()) {
                         var commitId = (String) commitsTableModel.getValueAt(row, 3);
-                        var changedFiles = getRepo().listChangedFilesInCommit(commitId);  // now returns List<RepoFile>
+                        var changedFiles = getRepo().listChangedFilesInCommitRange(commitId, commitId);
                         allChangedFiles.addAll(changedFiles);
                     }
                 }
@@ -990,15 +1051,17 @@ public class GitLogPanel extends JPanel {
                 }
                 logger.debug("Found {} bytes of changes in diff", diff.length());
 
+                List<String> fileNames = getRepo().listChangedFilesInCommitRange(firstCommitId, lastCommitId)
+                        .stream()
+                        .map(ProjectFile::getFileName)
+                        .collect(Collectors.toList());
+                String filesTxt = String.join(", ", fileNames);
                 String firstShortHash = firstCommitId.substring(0, 7);
                 String lastShortHash = lastCommitId.substring(0, 7);
-                String description;
-                if (selectedRows.length > 1) {
-                    description = String.format("git %s..%s: Changes across %d commits",
-                                                firstShortHash, lastShortHash, selectedRows.length);
-                } else {
-                    description  = String.format("git %s", firstShortHash);
-                }
+                var hashTxt = firstCommitId.equals(lastCommitId)
+                        ? firstShortHash
+                        : String.format("%s..%s", firstShortHash, lastShortHash);
+                String description = String.format("Diff of %s [%s]", filesTxt, hashTxt);
 
                 ContextFragment.StringFragment fragment =
                         new ContextFragment.StringFragment(diff, description);
@@ -1033,7 +1096,7 @@ public class GitLogPanel extends JPanel {
                 String lastCommitId = (String) commitsTableModel.getValueAt(sortedRows[sortedRows.length - 1], 3);
 
                 var repoFiles = filePaths.stream()
-                        .map(path -> new RepoFile(contextManager.getRoot(), path))
+                        .map(path -> new ProjectFile(contextManager.getRoot(), path))
                         .toList();
 
                 String diffs = repoFiles.stream()
@@ -1048,20 +1111,17 @@ public class GitLogPanel extends JPanel {
 
                 String firstShortHash = firstCommitId.substring(0, 7);
                 String lastShortHash = lastCommitId.substring(0, 7);
-
-                List<String> fileNames = filePaths.stream()
+                var filesTxt = filePaths.stream()
                         .map(path -> {
                             int slashPos = path.lastIndexOf('/');
                             return (slashPos >= 0 ? path.substring(slashPos + 1) : path);
                         })
-                        .collect(Collectors.toList());
-                String fileList = String.join(", ", fileNames);
+                        .collect(Collectors.joining(", "));
 
-                String description = String.format("git %s..%s [%s]: Changes across %d commits",
-                                                   firstShortHash, lastShortHash, fileList, selectedRows.length);
+                var hashTxt = firstCommitId.equals(lastCommitId) ? firstShortHash : "%s..%s".formatted(firstShortHash, lastShortHash);
+                var description = String.format("Diff of %s [%s]", filesTxt, hashTxt);
 
-                ContextFragment.StringFragment fragment =
-                        new ContextFragment.StringFragment(diffs, description);
+                ContextFragment.StringFragment fragment = new ContextFragment.StringFragment(diffs, description);
                 contextManager.addVirtualFragment(fragment);
                 chrome.systemOutput("Added changes for selected files in commit range to context");
             } catch (Exception ex) {
@@ -1070,40 +1130,29 @@ public class GitLogPanel extends JPanel {
             }
         });
     }
-    
+
     /**
-     * Compare selected files from a commit with the local working copy.
+     * Compare each selected file from the given commit to the actual local (on-disk) contents.
+     * Instead of using JGit's null-tree approach, we do an in-memory diff so we can handle
+     * uncommitted edits and corner-case commits.
      */
     private void compareFilesWithLocal(String commitId, List<String> filePaths) {
         contextManager.submitUserTask("Comparing files with local", () -> {
             try {
-                var repoFiles = filePaths.stream()
-                        .map(path -> new RepoFile(contextManager.getRoot(), path))
-                        .toList();
-                        
-                String allDiffs = repoFiles.stream()
-                        .map(file -> getRepo().showFileDiff("HEAD", commitId, file))
-                        .filter(s -> !s.isEmpty())
-                        .collect(Collectors.joining("\n\n"));
+                // For each file selected, show a diff in its own DiffPanel
+                for (String path : filePaths) {
+                    var repoFile = new ProjectFile(contextManager.getRoot(), path);
 
-                if (allDiffs.isEmpty()) {
-                    chrome.systemOutput("No differences found between selected files and local working copy");
-                    return;
+                    SwingUtilities.invokeLater(() -> {
+                        DiffPanel diffPanel = new DiffPanel(contextManager);
+                        // New method in DiffPanel; see below
+                        diffPanel.showCompareWithLocal(commitId, repoFile, /*useParent=*/ false);
+
+                        String shortHash = commitId.length() >= 7 ? commitId.substring(0, 7) : commitId;
+                        String title = String.format("Diff: %s [Local vs %s]", repoFile.getFileName(), shortHash);
+                        diffPanel.showInDialog(GitLogPanel.this, title);
+                    });
                 }
-
-                String shortHash = commitId.substring(0, 7);
-                StringBuilder fileList = new StringBuilder();
-                for (String fp : filePaths) {
-                    if (!fileList.isEmpty()) fileList.append(", ");
-                    int lastSlash = fp.lastIndexOf('/');
-                    fileList.append(lastSlash >= 0 ? fp.substring(lastSlash + 1) : fp);
-                }
-                String description = "git local vs " + shortHash + " [" + fileList + "]";
-
-                ContextFragment.StringFragment fragment =
-                        new ContextFragment.StringFragment(allDiffs, description);
-                contextManager.addVirtualFragment(fragment);
-                chrome.systemOutput("Added comparison with local for " + filePaths.size() + " file(s) to context");
             } catch (Exception ex) {
                 logger.error("Error comparing files with local", ex);
                 chrome.toolErrorRaw("Error comparing files with local: " + ex.getMessage());
@@ -1224,6 +1273,30 @@ public class GitLogPanel extends JPanel {
     }
 
     /**
+     * Creates a new branch from an existing one and checks it out.
+     */
+    private void createNewBranchFrom(String sourceBranch) {
+        String newName = JOptionPane.showInputDialog(
+                this,
+                "Enter name for new branch from '" + sourceBranch + "':",
+                "Create New Branch",
+                JOptionPane.QUESTION_MESSAGE
+        );
+        if (newName != null && !newName.trim().isEmpty()) {
+            contextManager.submitUserTask("Creating new branch: " + newName + " from " + sourceBranch, () -> {
+                try {
+                    getRepo().createAndCheckoutBranch(newName, sourceBranch);
+                    update();
+                    chrome.systemOutput("Created and checked out new branch '" + newName + "' from '" + sourceBranch + "'");
+                } catch (IOException e) {
+                    logger.error("Error creating new branch from {}: {}", sourceBranch, e);
+                    chrome.toolErrorRaw("Error creating new branch: " + e.getMessage());
+                }
+            });
+        }
+    }
+
+    /**
      * Rename a local branch.
      */
     private void renameBranch(String branchName) {
@@ -1237,7 +1310,8 @@ public class GitLogPanel extends JPanel {
             contextManager.submitUserTask("Renaming branch: " + branchName, () -> {
                 try {
                     getRepo().renameBranch(branchName, newName);
-                    update();
+                    SwingUtilities.invokeLater(this::update);
+                    chrome.systemOutput("Branch '" + branchName + "' renamed to '" + newName + "' successfully.");
                 } catch (IOException e) {
                     logger.error("Error renaming branch: {}", branchName, e);
                     chrome.toolErrorRaw("Error renaming branch: " + e.getMessage());
@@ -1297,9 +1371,9 @@ public class GitLogPanel extends JPanel {
     private void performBranchDeletion(String branchName, boolean force) {
         contextManager.submitUserTask("Deleting branch: " + branchName, () -> {
             try {
-                logger.debug("Initiating {} deletion for branch: {}", 
-                           force ? "force" : "normal", branchName);
-                
+                logger.debug("Initiating {} deletion for branch: {}",
+                             force ? "force" : "normal", branchName);
+
                 // Check if branch exists before trying to delete
                 List<String> localBranches = getRepo().listLocalBranches();
                 if (!localBranches.contains(branchName)) {
@@ -1307,7 +1381,7 @@ public class GitLogPanel extends JPanel {
                     chrome.toolErrorRaw("Cannot delete branch '" + branchName + "' - it doesn't exist locally");
                     return;
                 }
-                
+
                 // Check if it's the current branch
                 String currentBranch = getRepo().getCurrentBranch();
                 if (branchName.equals(currentBranch)) {
@@ -1315,15 +1389,15 @@ public class GitLogPanel extends JPanel {
                     chrome.toolErrorRaw("Cannot delete the current branch. Please checkout a different branch first.");
                     return;
                 }
-                
+
                 if (force) {
                     getRepo().forceDeleteBranch(branchName);
                 } else {
                     getRepo().deleteBranch(branchName);
                 }
-                
+
                 logger.debug("Branch '{}' deletion completed successfully", branchName);
-                update();
+                SwingUtilities.invokeLater(this::update);
                 chrome.systemOutput("Branch '" + branchName + "' " + (force ? "force " : "") + "deleted successfully.");
             } catch (IOException e) {
                 logger.error("Error deleting branch '{}': {}", branchName, e.getMessage(), e);
@@ -1374,7 +1448,7 @@ public class GitLogPanel extends JPanel {
     // ==================================================================
 
     private GitRepo getRepo() {
-        return contextManager.getProject().getRepo();
+        return (GitRepo) contextManager.getProject().getRepo();
     }
 
     private String getOldHeadId() {
@@ -1405,9 +1479,9 @@ public class GitLogPanel extends JPanel {
             java.time.LocalDate commitDate = date.toInstant()
                     .atZone(java.time.ZoneId.systemDefault())
                     .toLocalDate();
-            
+
             String timeStr = new java.text.SimpleDateFormat("HH:mm:ss").format(date);
-            
+
             if (commitDate.equals(today)) {
                 // If it's today's date, just show the time with "today"
                 return "Today " + timeStr;
@@ -1420,7 +1494,7 @@ public class GitLogPanel extends JPanel {
                 dayName = dayName.substring(0, 1).toUpperCase() + dayName.substring(1).toLowerCase();
                 return dayName + " " + timeStr;
             }
-            
+
             // Otherwise, show the standard date format
             return new java.text.SimpleDateFormat("yyyy-MM-dd HH:mm:ss").format(date);
         } catch (Exception e) {
@@ -1439,57 +1513,57 @@ public class GitLogPanel extends JPanel {
         for (GitRepo.StashInfo stash : stashes) {
             String baseName = stash.message();
             String stashRef = "stash@{" + stash.index() + "}";
-            
+
             try {
                 // Get additional commits for this stash
                 var additionalCommits = getRepo().listAdditionalStashCommits(stashRef);
-                
+
                 // If we have index or untracked commits, add them with appropriate labels
                 if (!additionalCommits.isEmpty()) {
                     // Add the main stash first with working tree label
                     stashCommits.add(new CommitInfo(
-                        stash.id(),
-                        baseName + " (working tree)" + " (stash@{" + stash.index() + "})",
-                        stash.author(),
-                        stash.date()
+                            stash.id(),
+                            baseName + " (working tree)" + " (stash@{" + stash.index() + "})",
+                            stash.author(),
+                            stash.date()
                     ));
-                    
+
                     // Add each additional commit with appropriate suffix
                     for (var entry : additionalCommits.entrySet()) {
                         var type = entry.getKey();
                         var commit = entry.getValue();
-                        String suffix = switch(type) {
+                        String suffix = switch (type) {
                             case "index" -> " (staged changes)";
                             case "untracked" -> " (untracked files)";
                             default -> " (unknown)"; // Should not happen
                         };
 
                         stashCommits.add(new CommitInfo(
-                            commit.id(),
-                            baseName + suffix + " (stash@{" + stash.index() + "})",
-                            commit.author(),
-                            commit.date()
+                                commit.id(),
+                                baseName + suffix + " (stash@{" + stash.index() + "})",
+                                commit.author(),
+                                commit.date()
                         ));
                     }
                 } else {
                     // No additional commits, just add the main stash
                     stashCommits.add(new CommitInfo(
-                        stash.id(),
-                        baseName + " (stash@{" + stash.index() + "})",
-                        stash.author(),
-                        stash.date()
+                            stash.id(),
+                            baseName + " (stash@{" + stash.index() + "})",
+                            stash.author(),
+                            stash.date()
                     ));
                 }
             } catch (Exception e) {
                 logger.warn("Could not fetch additional stash commits for {}: {}",
-                           stashRef, e.getMessage());
-                
+                            stashRef, e.getMessage());
+
                 // Fallback: Just add the main stash commit
                 stashCommits.add(new CommitInfo(
-                    stash.id(),
-                    baseName + " (stash@{" + stash.index() + "})",
-                    stash.author(),
-                    stash.date()
+                        stash.id(),
+                        baseName + " (stash@{" + stash.index() + "})",
+                        stash.author(),
+                        stash.date()
                 ));
             }
         }
@@ -1537,7 +1611,7 @@ public class GitLogPanel extends JPanel {
 
         GitPanel gitPanel = chrome.getGitPanel();
         if (gitPanel != null) {
-            var repoFile = new RepoFile(contextManager.getRoot(), filePath);
+            var repoFile = new ProjectFile(contextManager.getRoot(), filePath);
             gitPanel.addFileHistoryTab(repoFile);
         }
     }
@@ -1546,16 +1620,15 @@ public class GitLogPanel extends JPanel {
      * Edit the given file inside your IDE or editor plugin.
      */
     private void editFile(String filePath) {
-        List<RepoFile> files = new ArrayList<>();
-        files.add(new RepoFile(contextManager.getRoot(), filePath));
+        List<ProjectFile> files = new ArrayList<>();
+        files.add(new ProjectFile(contextManager.getRoot(), filePath));
         contextManager.editFiles(files);
     }
-    
+
     /**
      * Shows a diff for a single file in the changes tree (if exactly one commit is selected).
      */
-    private void viewDiffForChangesTree(TreePath path)
-    {
+    private void viewDiffForChangesTree(TreePath path) {
         var node = (DefaultMutableTreeNode) path.getLastPathComponent();
         if (node == changesRootNode || node.getParent() == changesRootNode) {
             return; // It's the root or a directory, not a file
@@ -1566,18 +1639,45 @@ public class GitLogPanel extends JPanel {
         var filePath = dirPath.isEmpty() ? fileName : dirPath + "/" + fileName;
 
         int[] selRows = commitsTable.getSelectedRows();
-        if (selRows.length == 1)
-        {
+        if (selRows.length == 1) {
             var commitId = (String) commitsTableModel.getValueAt(selRows[0], 3);
             showFileDiff(commitId, filePath);
         }
     }
 
     /**
+     * Shows the contents of a file at a specific revision.
+     */
+    private void viewFileAtRevision(String commitId, String filePath) {
+        contextManager.submitUserTask("Viewing file at revision", () -> {
+            try {
+                var repoFile = new ProjectFile(contextManager.getRoot(), filePath);
+                var content = getRepo().getFileContent(commitId, repoFile);
+                
+                if (content.isEmpty()) {
+                    chrome.systemOutput("File not found in this revision or is empty.");
+                    return;
+                }
+                
+                SwingUtilities.invokeLater(() -> {
+                    String shortHash = commitId.length() > 7 ? commitId.substring(0, 7) : commitId;
+                    String title = String.format("%s at %s", repoFile.getFileName(), shortHash);
+                    
+                    var fragment = new ContextFragment.StringFragment(content, title);
+                    chrome.openFragmentPreview(fragment, SyntaxConstants.SYNTAX_STYLE_JAVA);
+                });
+            } catch (Exception ex) {
+                logger.error("Error viewing file at revision", ex);
+                chrome.toolErrorRaw("Error viewing file at revision: " + ex.getMessage());
+            }
+        });
+    }
+
+    /**
      * Shows the diff for a file in a commit.
      */
     private void showFileDiff(String commitId, String filePath) {
-        RepoFile file = new RepoFile(contextManager.getRoot(), filePath);
+        ProjectFile file = new ProjectFile(contextManager.getRoot(), filePath);
         DiffPanel diffPanel = new DiffPanel(contextManager);
 
         String shortCommitId = commitId.length() > 7 ? commitId.substring(0, 7) : commitId;
@@ -1601,7 +1701,7 @@ public class GitLogPanel extends JPanel {
             } catch (Exception e) {
                 logger.error("Error popping stash", e);
                 SwingUtilities.invokeLater(() ->
-                        chrome.toolErrorRaw("Error popping stash: " + e.getMessage()));
+                                                   chrome.toolErrorRaw("Error popping stash: " + e.getMessage()));
             }
         });
     }
@@ -1618,8 +1718,7 @@ public class GitLogPanel extends JPanel {
                 });
             } catch (Exception e) {
                 logger.error("Error applying stash", e);
-                SwingUtilities.invokeLater(() ->
-                        chrome.toolErrorRaw("Error applying stash: " + e.getMessage()));
+                SwingUtilities.invokeLater(() -> chrome.toolErrorRaw("Error applying stash: " + e.getMessage()));
             }
         });
     }
@@ -1648,7 +1747,7 @@ public class GitLogPanel extends JPanel {
             } catch (Exception e) {
                 logger.error("Error dropping stash", e);
                 SwingUtilities.invokeLater(() ->
-                        chrome.toolErrorRaw("Error dropping stash: " + e.getMessage()));
+                                                   chrome.toolErrorRaw("Error dropping stash: " + e.getMessage()));
             }
         });
     }
@@ -1659,18 +1758,19 @@ public class GitLogPanel extends JPanel {
     private void checkBranchContextMenuState(JPopupMenu menu) {
         int selectedRow = branchTable.getSelectedRow();
         boolean isLocal = (selectedRow != -1);
-        
+
         // Check if the selected branch is the current branch
         boolean isCurrentBranch = false;
         if (isLocal) {
             String checkmark = (String) branchTableModel.getValueAt(selectedRow, 0);
             isCurrentBranch = "✓".equals(checkmark);
         }
-        
-        // rename = menu.getComponent(2), delete = menu.getComponent(3)
+
+        // newBranch = menu.getComponent(1), merge = menu.getComponent(2)
+        // rename = menu.getComponent(3), delete = menu.getComponent(4)
         // Adjust as needed if you change order
-        menu.getComponent(2).setEnabled(isLocal);
-        menu.getComponent(3).setEnabled(isLocal && !isCurrentBranch); // Can't delete current branch
+        menu.getComponent(3).setEnabled(isLocal);
+        menu.getComponent(4).setEnabled(isLocal && !isCurrentBranch); // Can't delete current branch
     }
 
     /**
@@ -1713,7 +1813,7 @@ public class GitLogPanel extends JPanel {
                 return;
             }
         }
-        
+
         // If not found in the current view, let the user know
         chrome.systemOutput("Commit " + commitId.substring(0, 7) + " not found in current branch view");
     }
